--- a/desafios/desafioFormulario/formulario22/estilos/style.css
+++ b/desafios/desafioFormulario/formulario22/estilos/style.css
@@ -26,6 +26,8 @@ section#login {
     background-color: white;
 
     width: 300px;
+    height: 450px;
+    
 }
 
 div#formulario {
@@ -60,7 +62,7 @@ section.checkbox {
 
 .reme {
     font-size: .8em;
-    padding-left: 5px;
+    margin-left: 5px;
 }
 
 section.checkbox > a {
@@ -68,7 +70,7 @@ section.checkbox > a {
     color: rgba(1, 1, 44, 0.774);
     font-weight: 700;
     font-size: .8em;
-    padding-left: 30px;
+    margin-left: 30px;
 }
 
 section.botao {
@@ -109,4 +111,107 @@ section.botao input {
 .footer > a > img {
     margin: 25px 8px 20px 0px;
     width: 30px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 820px) {
+    section#login {
+        width: 80vw;
+    }
+
+    section#login > div#imagem {
+        background: url(../imagem/Capturar-foto2.PNG) no-repeat;
+        background-position: center center;
+        float: right;
+        width: 50%;
+        height: 100%;
+    }
+
+    section#login > div#formulario {
+        float: left;
+        width: 50%;
+        height: 100%;
+    }
+    
+    section.checkbox {
+        margin-left: 30px;
+    }
+
+    section.checkbox > a {
+        margin-left: 30px;
+    }
+}
+
+@media screen and (min-width: 820px) and (max-width: 992px) {
+    section#login {
+        width: 80vw;
+    }
+
+    section#login > div#imagem {
+        background: url(../imagem/Capturar-foto2.PNG) no-repeat;
+        background-position: center center;
+        float: right;
+        width: 50%;
+        height: 100%;
+    }
+
+    section#login > div#formulario {
+        float: left;
+        width: 50%;
+        height: 100%;
+    }
+
+    section.lo-in input {
+        width: 70%;
+    }
+    
+    section.checkbox {
+        margin-left: 50px;
+    }
+
+    section.checkbox > a {
+        margin-left: 40px;
+        
+    }
+
+    section.botao input {
+        width: 70%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    section#login {
+        width: 800px;
+        height: 450px;
+        box-shadow: 4px 4px 6px rgba(173, 216, 230, 0.308);
+    }
+
+    section#login > div#imagem {
+        background: url(../imagem/Capturar-foto2.PNG) no-repeat;
+        background-position: center center;
+        float: right;
+        width: 50%;
+        height: 100%;
+    }
+
+    section#login > div#formulario {
+        float: left;
+        width: 50%;
+        height: 100%;
+    }
+
+    section.lo-in input {
+        width: 70%;
+    }
+
+    section.botao input {
+        width: 70%;
+    }
+
+    section.checkbox {
+        margin-left: 60px;
+    }
+
+    section.checkbox > a {
+        margin-left: 60px;
+    }
 }
