--- a/UdemyHtmlCss/projeto-tecblog/hometec.css
+++ b/UdemyHtmlCss/projeto-tecblog/hometec.css
@@ -9,12 +9,15 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #e6e6e6;
+    width: 100%;
+    height: 100vh;
 }
 
 /*Smartphone portrait*/
 
 header {
     height: 120px;
+    
     background-color: #f7b600;
     display: flex;
     flex-direction: column;
@@ -56,34 +59,49 @@ header h1 strong {
 
 main {
     display: flex;
+    justify-content: center;
+    
+}
+
+#container-principal {
+    display: flex;
+    flex-direction: column;
+}
+
+#container-postagens {
+    display: flex;
+    flex-direction: column;
 }
 
 .postagens {
     background-color: #fff;
-    width: 260px;
-    height: 180px;
-    margin: 10px;
+    width: 240px;
+    height: 190px;
+    margin-left: 15px;
+    margin-top: 20px;
 }
 
 .postagens h2 {
     background-color: rgb(192, 191, 191);
-    color: gray;
+    color: rgb(90, 90, 90);
+    margin: 8px;
 }
 
 .postagens p {
     text-align: justify;
+    margin: 0px 10px;
 }
 
-.postagens p strong {
+strong {
     color: #f7b600;
 }
 
 .principal {
     display: flex;
     flex-direction: column;
-    width: 60vw;
+    margin-top: 20px;
+    width: 600px;
     background-color: white;
-    margin: 0 auto;
 }
 
 .principal h1 {
@@ -95,9 +113,34 @@ main {
 .principal p {
     margin-bottom: 15px;
     margin-left: 25px;
+    margin-top: 5px;
 }
 
 .img-principal {
     width: 90%;
     margin: 0 auto;
+}
+
+footer {
+    background-color: rgba(128, 128, 128, 0.37);
+    height: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+footer h2 {
+    font-size: 1.3em;
+}
+
+footer p {
+    font-size: 0.9em;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+    font-weight: 700;
 }
